Implement update in resource and swagger
